@@ -5,15 +5,15 @@ import org.bukkit.command.CommandSender;
 import preponderous.ponder.minecraft.bukkit.abs.AbstractPluginCommand;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * @author Daniel McCoy Stephenson
  */
-public class HelpCommand extends AbstractPluginCommand {
+public final class HelpCommand extends AbstractPluginCommand {
 
     public HelpCommand() {
-        super(new ArrayList<>(Arrays.asList("help")), new ArrayList<>(Arrays.asList("fs.help")));
+        super(new ArrayList<>(List.of("help")), new ArrayList<>(List.of("fs.help")));
     }
 
     @Override
